# ComfyUI-MiniMax-Remover

./: README.md  __init__.py  pyproject.toml  requirements.txt
Minimax/: __init__.py  pipeline_minimax_remover.py
example_workflows/: MiniMax Image Object Remover.json  MiniMax video Object Remover.json  Thumbs.db
nodes/: image_size_adjuster_node.py  minimax_image_remover_node.py  minimax_video_remover_node.py  model_loader_node.py  utils.py  video_loader_node.py
